fix URL encoding for Unicode and special characters in redirect URLs